exports[`Dropdown Dropdown renders correctly 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function anonymous]}
  onMouseLeave={[Function anonymous]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown Dropdown renders correctly 2`] = `
<li
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-parent"
  onClick={false}
  onMouseEnter={[Function anonymous]}
  onMouseLeave={[Function anonymous]}>
  <a>
    Parent 
    <i
      className="uk-icon-caret-down" />
  </a>
</li>
`;

exports[`Dropdown changes the class when hovered 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function anonymous]}
  onMouseLeave={[Function anonymous]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 2`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function anonymous]}
  onMouseLeave={[Function anonymous]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 3`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function anonymous]}
  onMouseLeave={[Function anonymous]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;
